Fix issue init msg, fix header and z-index

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -41,13 +41,13 @@
 }
 
 @keyframes typing {
-  from { width: 0; }
-  to { width: 100%; }
+  from { width: 0ch; }
+  to { width: 17ch; } /* numero caratteri della frase "Welcome back!" */
 }
 
 @keyframes deleting {
-  from { width: 100%; }
-  to { width: 0; }
+  from { width: 17ch; }
+  to { width: 0ch; }
 }
 
 @keyframes blink {
@@ -61,7 +61,28 @@
   border-right: 3px solid #000;
   width: 0; /* parte da 0 e cresce con l'animazione */
   animation: 
-    typing 4s steps(30) 1s 1 forwards,
-    deleting 3s steps(30) 5s 1 forwards,
+    typing 4s steps(17) 1s 1 forwards,
+    deleting 3s steps(17) 5s 1 forwards,
     blink 0.75s step-end infinite;
+}
+
+
+@keyframes typing_normal {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+.typing-effect-guest {
+  white-space: normal;   /* Assicura che il testo vada a capo */
+  word-wrap: break-word;  /* Impedisce che parole troppo lunghe escano dal contenitore */
+  overflow-wrap: break-word; /* Gestisce il wrapping delle parole */
+  display: inline-block;
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: 3px solid #000; /* Simula il cursore */
+  animation: typing_normal 4s steps(30) 1s 1 normal both, blink 0.75s step-end infinite;
 }
